// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`package details > render package details for a 1915(c) submission 1`] = `
<DocumentFragment>
  <section
    class="p-4 border rounded-sm border-cardBorder"
    id="package_details"
  >
    <h1
      class="text-3xl font-semibold mb-2"
      data-testid="undefined-title"
    >
      1915(c) Package Details
    </h1>
    <hr
      class="my-6 bg-slate-200"
    />
    <div
      class="gap-8 flex flex-col"
      data-testid="undefined-child"
    >
      <div
        class="flex-col gap-4 max-w-2xl"
      >
        <div
          class="grid grid-cols-2 gap-6"
        >
          <div>
            <h3
              class="font-bold"
            >
              Submission ID
            </h3>
            <div
              class="py-2"
            >
              MD-010.R00.01
            </div>
          </div>
          <div>
            <h3
              class="font-bold"
            >
              Authority
            </h3>
            <div
              class="py-2"
            >
              1915(c)
            </div>
          </div>
          <div>
            <h3
              class="font-bold"
            >
              Action Type
            </h3>
            <div
              class="py-2"
            >
              Initial
            </div>
          </div>
          <div>
            <h3
              class="font-bold"
            >
              State
            </h3>
            <div
              class="py-2"
            >
              Maryland
            </div>
          </div>
          <div>
            <h3
              class="font-bold"
            >
              Proposed Effective Date
            </h3>
            <div
              class="py-2"
            >
              Pending
            </div>
          </div>
          <div>
            <h3
              class="font-bold"
            >
              Initial Submission Date
            </h3>
            <div
              class="py-2"
            >
              -- --
            </div>
          </div>
          <div>
            <h3
              class="font-bold"
            >
              Latest Package Activity
            </h3>
            <div
              class="py-2"
            >
              -- --
            </div>
          </div>
          <div>
            <h3
              class="font-bold"
            >
              Formal RAI Response Date
            </h3>
            <div
              class="py-2"
            >
              -- --
            </div>
          </div>
          <div>
            <h3
              class="font-bold"
            >
              Final Disposition Date
            </h3>
            <div
              class="py-2"
            >
              -- --
            </div>
          </div>
          <div>
            <h3
              class="font-bold"
            >
              Approved Effective Date
            </h3>
            <div
              class="py-2"
            >
              -- --
            </div>
          </div>
        </div>
        <hr
          class="my-4"
        />
        <div
          class="grid grid-cols-2 gap-6"
        >
          <div>
            <h3
              class="font-bold"
            >
              Submitted By
            </h3>
            <div
              class="py-2"
            >
              <p
                class="text-lg"
              >
                -- --
              </p>
            </div>
          </div>
          <div>
            <h3
              class="font-bold"
            >
              CPOC
            </h3>
            <div
              class="py-2"
            >
              <p
                class="text-lg"
              >
                -- --
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
  ,
</DocumentFragment>
`;

exports[`package details > render package details for a 1915(c) submission with action type amend 1`] = `
<DocumentFragment>
  <section
    class="p-4 border rounded-sm border-cardBorder"
    id="package_details"
  >
    <h1
      class="text-3xl font-semibold mb-2"
      data-testid="undefined-title"
    >
      1915(c) Appendix K Amendment Package Details
    </h1>
    <hr
      class="my-6 bg-slate-200"
    />
    <div
      class="gap-8 flex flex-col"
      data-testid="undefined-child"
    >
      <div
        class="flex-col gap-4 max-w-2xl"
      >
        <div
          class="grid grid-cols-2 gap-6"
        >
          <div>
            <h3
              class="font-bold"
            >
              Submission ID
            </h3>
            <div
              class="py-2"
            >
              MD-0000.R00.01
            </div>
          </div>
          <div>
            <h3
              class="font-bold"
            >
              Authority
            </h3>
            <div
              class="py-2"
            >
              1915(c)
            </div>
          </div>
          <div>
            <h3
              class="font-bold"
            >
              Action Type
            </h3>
            <div
              class="py-2"
            >
              Amendment
            </div>
          </div>
          <div>
            <h3
              class="font-bold"
            >
              State
            </h3>
            <div
              class="py-2"
            >
              Maryland
            </div>
          </div>
          <div>
            <h3
              class="font-bold"
            >
              Proposed Effective Date
            </h3>
            <div
              class="py-2"
            >
              Pending
            </div>
          </div>
          <div>
            <h3
              class="font-bold"
            >
              Initial Submission Date
            </h3>
            <div
              class="py-2"
            >
              -- --
            </div>
          </div>
          <div>
            <h3
              class="font-bold"
            >
              Latest Package Activity
            </h3>
            <div
              class="py-2"
            >
              -- --
            </div>
          </div>
          <div>
            <h3
              class="font-bold"
            >
              Formal RAI Response Date
            </h3>
            <div
              class="py-2"
            >
              -- --
            </div>
          </div>
          <div>
            <h3
              class="font-bold"
            >
              Final Disposition Date
            </h3>
            <div
              class="py-2"
            >
              -- --
            </div>
          </div>
          <div>
            <h3
              class="font-bold"
            >
              Approved Effective Date
            </h3>
            <div
              class="py-2"
            >
              -- --
            </div>
          </div>
        </div>
        <hr
          class="my-4"
        />
        <div
          class="grid grid-cols-2 gap-6"
        >
          <div>
            <h3
              class="font-bold"
            >
              Submitted By
            </h3>
            <div
              class="py-2"
            >
              <p
                class="text-lg"
              >
                -- --
              </p>
            </div>
          </div>
          <div>
            <h3
              class="font-bold"
            >
              CPOC
            </h3>
            <div
              class="py-2"
            >
              <p
                class="text-lg"
              >
                -- --
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
  ,
</DocumentFragment>
`;

exports[`package details > render package details for a 1915(c) submission with action type extend 1`] = `
<DocumentFragment>
  <section
    class="p-4 border rounded-sm border-cardBorder"
    id="package_details"
  >
    <h1
      class="text-3xl font-semibold mb-2"
      data-testid="undefined-title"
    >
      Temporary Extension Request Details
    </h1>
    <hr
      class="my-6 bg-slate-200"
    />
    <div
      class="gap-8 flex flex-col"
      data-testid="undefined-child"
    >
      <div
        class="flex-col gap-4 max-w-2xl"
      >
        <div
          class="grid grid-cols-2 gap-6"
        >
          <div>
            <h3
              class="font-bold"
            >
              Submission ID
            </h3>
            <div
              class="py-2"
            >
              MD-0005.R01.TE00
            </div>
          </div>
          <div>
            <h3
              class="font-bold"
            >
              Authority
            </h3>
            <div
              class="py-2"
            />
          </div>
          <div>
            <h3
              class="font-bold"
            >
              State
            </h3>
            <div
              class="py-2"
            >
              Maryland
            </div>
          </div>
          <div>
            <h3
              class="font-bold"
            >
              Approved Initial or Renewal Number
            </h3>
            <div
              class="py-2"
            />
          </div>
          <div>
            <h3
              class="font-bold"
            >
              Initial Submission Date
            </h3>
            <div
              class="py-2"
            >
              -- --
            </div>
          </div>
          <div>
            <h3
              class="font-bold"
            >
              Latest Package Activity
            </h3>
            <div
              class="py-2"
            >
              -- --
            </div>
          </div>
        </div>
        <hr
          class="my-4"
        />
        <div
          class="grid grid-cols-2 gap-6"
        >
          <div>
            <h3
              class="font-bold"
            >
              Submitted By
            </h3>
            <div
              class="py-2"
            >
              <p
                class="text-lg"
              >
                -- --
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
  ,
</DocumentFragment>
`;

exports[`package details > renders package details for a 1915(b) submission 1`] = `
<DocumentFragment>
  <section
    class="p-4 border rounded-sm border-cardBorder"
    id="package_details"
  >
    <h1
      class="text-3xl font-semibold mb-2"
      data-testid="undefined-title"
    >
      1915(b) Package Details
    </h1>
    <hr
      class="my-6 bg-slate-200"
    />
    <div
      class="gap-8 flex flex-col"
      data-testid="undefined-child"
    >
      <div
        class="flex-col gap-4 max-w-2xl"
      >
        <div
          class="grid grid-cols-2 gap-6"
        >
          <div>
            <h3
              class="font-bold"
            >
              Submission ID
            </h3>
            <div
              class="py-2"
            >
              MD-0000.R00.00
            </div>
          </div>
          <div>
            <h3
              class="font-bold"
            >
              Authority
            </h3>
            <div
              class="py-2"
            >
              1915(b)
            </div>
          </div>
          <div>
            <h3
              class="font-bold"
            >
              Action Type
            </h3>
            <div
              class="py-2"
            >
              Initial
            </div>
          </div>
          <div>
            <h3
              class="font-bold"
            >
              State
            </h3>
            <div
              class="py-2"
            >
              Maryland
            </div>
          </div>
          <div>
            <h3
              class="font-bold"
            >
              Proposed Effective Date
            </h3>
            <div
              class="py-2"
            >
              Pending
            </div>
          </div>
          <div>
            <h3
              class="font-bold"
            >
              Initial Submission Date
            </h3>
            <div
              class="py-2"
            >
              -- --
            </div>
          </div>
          <div>
            <h3
              class="font-bold"
            >
              Latest Package Activity
            </h3>
            <div
              class="py-2"
            >
              -- --
            </div>
          </div>
          <div>
            <h3
              class="font-bold"
            >
              Formal RAI Response Date
            </h3>
            <div
              class="py-2"
            >
              -- --
            </div>
          </div>
          <div>
            <h3
              class="font-bold"
            >
              Final Disposition Date
            </h3>
            <div
              class="py-2"
            >
              -- --
            </div>
          </div>
          <div>
            <h3
              class="font-bold"
            >
              Approved Effective Date
            </h3>
            <div
              class="py-2"
            >
              -- --
            </div>
          </div>
        </div>
        <hr
          class="my-4"
        />
        <div
          class="grid grid-cols-2 gap-6"
        >
          <div>
            <h3
              class="font-bold"
            >
              Submitted By
            </h3>
            <div
              class="py-2"
            >
              <p
                class="text-lg"
              >
                -- --
              </p>
            </div>
          </div>
          <div>
            <h3
              class="font-bold"
            >
              CPOC
            </h3>
            <div
              class="py-2"
            >
              <p
                class="text-lg"
              >
                -- --
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
  ,
</DocumentFragment>
`;
